# Garden-Framework

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  configure
examples/hello-world/: Makefile  hello-view.c
include/: attrib.h  connect.h  gnode.h  mem.h  sock-io.h  view.h  web-header.h
src/: garden.c  gnode.c  mem.c  sock-connect.c  sock-io.c  view.c  web-header.c
